# vrep-plugin-skeleton-cmake

./: CMakeLists.txt  README.md
common/: v_repLib.cpp
src/: v_repExtPluginSkeleton.cpp
